# catgirl-CLI

./: .env.example  .gitignore  README.md  pyproject.toml
src/catgirl_downloader/: __main__.py  cli.py  downloader.py  fs.py  models.py
src/catgirl_downloader/providers/: __init__.py  base.py  e621.py  nekobot.py  nekos_best.py  nekos_life.py  nekosapi.py  registry.py  rule34.py  waifu_pics.py
tests/: test_cli.py  test_downloader.py  test_fs.py  test_providers.py
