[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catgirl-downloader"
version = "0.1.0"
description = "CLI tool to download catgirl/neko/kitsune/femboy images from multiple public APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.3,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "anyio>=4.4.0,<5.0.0",
    "prompt_toolkit>=3.0.47,<4.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-httpx>=0.30.0,<1.0.0",
    "ruff>=0.6.0,<1.0.0",
]

[project.scripts]
catgirl = "catgirl_downloader.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
